--- a/build.gradle
+++ b/build.gradle
@@ -29,4 +29,11 @@ sonarqube {
     }
 }
 
+task copyToLib(type: Copy) {
+    into "$buildDir/libs"
+    from(configurations.compile)
+}
+
+stage.dependsOn(copyToLib)
+
 apply from: './main.gradle'
